--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15" />
 
     <application android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
 
     </application>
